Better meta storage - but hell-ish Mongo queries!

--- a/etc/web-pages/Users.html.slim
+++ b/etc/web-pages/Users.html.slim
@@ -32,7 +32,7 @@
 							th	Documentation
 						-- allPods.each |pod|
 							tr
-								td.text-nowrap;	a (href="${podSummaryUrl(pod)}") ${pod.name}
+								td.text-nowrap;b;	a (href="${podSummaryUrl(pod)}") ${pod.projectName}
 								td.text-nowrap	${pod.version}
 								td.text-nowrap	${pod.builtOn.toLocale("DDD MMM YYYY")}
 								td				${pod.summary}
