Table row linking on pods

--- a/etc/less/website.less
+++ b/etc/less/website.less
@@ -12,6 +12,7 @@
 @import "sections/syntax.less";
 
 @import "components/fatFooter.less";
+@import "components/jasny-bootstrap.less";
 @import "components/topNavBar.less";
 
 @import "pages/podSummaryPage.less";
