--- a/etc/web-pages/Users.html.slim
+++ b/etc/web-pages/Users.html.slim
@@ -23,19 +23,21 @@
 				h2	Public Published Pods
 				p	${user.realName ?: user.screenName} has published ${podDao.countPublicVersions(user)} version(s) of ${allPods.size} public pod(s).
 				div.table-responsive
-					table.table.table-striped.table-condensed
-						tr
-							th	Name
-							th	Version
-							th.text-nowrap	Built On
-							th	Summary
-							th	Documentation
-						-- allPods.each |pod|
+					table.table.table-striped.table-condensed.table-hover
+						thead
 							tr
-								td.text-nowrap;b;	a (href="${podSummaryUrl(pod)}") ${pod.projectName}
-								td.text-nowrap	${pod.version}
-								td.text-nowrap	${pod.builtOn.toLocale("DDD MMM YYYY")}
-								td				${pod.summary}
-								td.text-nowrap;	== podDocsHtml(pod)
+								th	Name
+								th	Version
+								th.text-nowrap	Built On
+								th	Summary
+								th	Documentation
+						tbody.rowlink (data-link="row")
+							-- allPods.each |pod|
+								tr
+									td.text-nowrap;b;	a (href="${podSummaryUrl(pod)}") ${pod.projectName}
+									td.text-nowrap	${pod.version}
+									td.text-nowrap	${pod.builtOn.toLocale("DDD MMM YYYY")}
+									td				${pod.summary}
+									td.rowlink-skip.text-nowrap;	== podDocsHtml(pod)
 
 		nav.col-sm-3.hidden-xs
