--- a/etc/less/website.less
+++ b/etc/less/website.less
@@ -11,6 +11,7 @@
 @import "sections/fandoc.less";
 @import "sections/syntax.less";
 
+@import "components/anchorJs.less";
 @import "components/fatFooter.less";
 @import "components/jasny-bootstrap.less";
 @import "components/topNavBar.less";
