--- a/etc/less/pages/podSummaryPage.less
+++ b/etc/less/pages/podSummaryPage.less
@@ -1,7 +1,9 @@
 
 #podSummaryPage {
-	h2, h3 {
-		margin-top:			@line-height-computed * 2;
+	.api {	// don't affect the sidebarnav
+		h2, h3 {
+			margin-top:			@line-height-computed * 2;
+		}
 	}
 
 	.installText {
