--- a/etc/web-pages/Users.html.slim
+++ b/etc/web-pages/Users.html.slim
@@ -23,7 +23,7 @@
 				h2	Public Published Pods
 				p	${user.realName ?: user.screenName} has published ${podDao.countPublicVersions(user)} version(s) of ${allPods.size} public pod(s).
 				div.table-responsive
-					table.table.table-striped.table-condensed.table-hover
+					table.table.table-striped.table-hover
 						thead
 							tr
 								th	Name
