--- a/etc/web-pages/my/MyPods.html.slim
+++ b/etc/web-pages/my/MyPods.html.slim
@@ -13,7 +13,7 @@
 	-- else
 		p	You have ${allPods.size} pod(s).
 		div.table-responsive
-			table.table.table-striped.table-condensed.table-hover
+			table.table.table-striped.table-hover
 				thead
 					tr
 						th	Name
