--- a/etc/web-pages/Users.html.slim
+++ b/etc/web-pages/Users.html.slim
@@ -7,7 +7,7 @@
 			a.btn.btn-primary.btn-xs.pull-right (href="${pages[MyDetailsPage#].pageUrl.encode}") &nbsp;&nbsp;Edit User&nbsp;&nbsp;
 
 	div.row
-		article.col-sm-9
+		article.col-sm-12
 			img.img-thumbnail.pull-right (src="${user.gravatarImageUrl(110)}")
 			h1.podHeading
 				span	user
@@ -29,6 +29,7 @@
 								th	Name
 								th	Version
 								th.text-nowrap	Built On
+								th	JS
 								th	Summary
 								th	Documentation
 						tbody.rowlink (data-link="row")
@@ -37,7 +38,9 @@
 									td.text-nowrap;b;	a (href="${podSummaryUrl(pod)}") ${pod.projectName}
 									td.text-nowrap	${pod.version}
 									td.text-nowrap	${pod.builtOn.toLocale("DDD MMM YYYY")}
+									td.text; -- if (pod.meta.jsEnabled)
+										span.jsIcon (title="Pod has been compiled to Javascript")
 									td				${pod.summary}
 									td.rowlink-skip.text-nowrap;	== podDocsHtml(pod)
 
-		nav.col-sm-3.hidden-xs
+		//nav.col-sm-3.hidden-xs
