--- a/etc/less/website.less
+++ b/etc/less/website.less
@@ -17,4 +17,5 @@
 @import "components/jasny-bootstrap.less";
 @import "components/topNavBar.less";
 
+@import "pages/podsPage.less";
 @import "pages/podSummaryPage.less";
