--- a/etc/less/pages/podSummaryPage.less
+++ b/etc/less/pages/podSummaryPage.less
@@ -1,6 +1,6 @@
 
 #podSummaryPage {
-	.api {	// don't affect the sidebarnav
+	article {	// don't affect the sidebarnav
 		h2, h3 {
 			margin-top:			@line-height-computed * 2;
 		}
