--- a/etc/web-pages/Users.html.slim
+++ b/etc/web-pages/Users.html.slim
@@ -21,7 +21,7 @@
 
 			-- if (allPods.size > 0)
 				h2	Public Published Pods
-				p	${user.realName ?: user.screenName} has published ${podDao.countPublicVersions(user)} version(s) of ${allPods.size} public pod(s).
+				p	${user.realName ?: user.screenName} has published ${podDao.countPublicVersions()} version(s) of ${allPods.size} public pod(s).
 				div.table-responsive
 					table.table.table-striped.table-hover
 						thead
