--- a/etc/web-pages/help/HelpFandoc.html.slim
+++ b/etc/web-pages/help/HelpFandoc.html.slim
@@ -5,7 +5,9 @@
 		li.active	Writing Documentation
 
 	div.row
-		article.col-sm-9
-			h1.podHeading
-				span	help
-				| Writing Documentation
+		h1.podHeading
+			span	help
+			| Writing Documentation
+
+		== printFandocHelp(`HelpFandoc.fandoc`)
+			
