--- a/etc/web-pages/help/HelpFanr.html.slim
+++ b/etc/web-pages/help/HelpFanr.html.slim
@@ -5,9 +5,8 @@
 		li.active	Using fanr
 
 	div.row
-		article.col-sm-9
-			h1.podHeading
-				span	help
-				| Using fanr
+		h1.podHeading
+			span	help
+			| Using fanr
 
-			p	Use email in place of usernamem e,.g.
+		== printFandocHelp(`HelpFanr.fandoc`)
