--- a/etc/less/global.less
+++ b/etc/less/global.less
@@ -156,3 +156,8 @@ li > div.syntax {
 	height:			@navbar-height + @navbar-margin-bottom;
 	margin:			-(@navbar-height + @navbar-margin-bottom) 0 0 0;
 }
+
+// hide the Honey Pots from humans
+.passwordAgain {
+	display:		none;
+}
