Better index page and help tweaks

--- a/etc/less/website.less
+++ b/etc/less/website.less
@@ -17,5 +17,6 @@
 @import "components/jasny-bootstrap.less";
 @import "components/topNavBar.less";
 
+@import "pages/indexPage.less";
 @import "pages/podsPage.less";
 @import "pages/podSummaryPage.less";
