--- a/etc/web-components/FatFooter.slim
+++ b/etc/web-components/FatFooter.slim
@@ -13,7 +13,8 @@ footer#fatFooter.clearfix.hidden-print
 						br
 						a#contactUs (href="#" data-unscramble="${repoConfig.contactEmail.encode.reverse}") ${"".padl('-', repoConfig.contactEmail.encode.size)}
 
-				p	Fantom Pod Repository ${FatFooter#.pod.version} - © ${Date.today.year} Alien-Factory
+				p	Fantom Pod Repository v${FatFooter#.pod.version}
+					// - © ${Date.today.year} Alien-Factory
 					br
 					a (href="http://www.fantom.org/")
 						img (src="http://img.shields.io/badge/developed%20in-Fantom-lightgray.svg" alt="Developed in: Fantom")
