--- a/etc/web-pages/help/HelpFandoc.html.slim
+++ b/etc/web-pages/help/HelpFandoc.html.slim
@@ -1,13 +1,13 @@
 -- app.renderLayout(true, "Writing Documentation :: Help")
 
 	ol.breadcrumb
-		li.active	Help
+		li.active	Get Started
 		li.active	Writing Documentation
 			
 	div.row
 		article.col-sm-9
 			h1.podHeading
-				span	help
+				span	get started
 				| Writing Documentation
 
 			p	| Documentation for both the API and documentation pages are written in <a href="http://fantom.org/doc/fandoc/index#overview">Fandoc</a>.
