--- a/etc/web-pages/help/HelpFanr.html.slim
+++ b/etc/web-pages/help/HelpFanr.html.slim
@@ -1,13 +1,13 @@
 -- app.renderLayout(true, "Using fanr :: Help")
 
 	ol.breadcrumb
-		li.active	Help
+		li.active	Get Started
 		li.active	Using fanr
 
 	div.row
 		article.col-sm-9
 			h1.podHeading
-				span	help
+				span	get started
 				| Using fanr
 		
 			-- echo(host)
