--- a/etc/web-pages/help/HelpPublish.html.slim
+++ b/etc/web-pages/help/HelpPublish.html.slim
@@ -1,13 +1,13 @@
 -- app.renderLayout(true, "Publishing Pods :: Help")
 
 	ol.breadcrumb
-		li.active	Help
+		li.active	Get Started
 		li.active	Publishing Pods
 
 	div.row
 		article.col-sm-9
 			h1.podHeading
-				span	help
+				span	get started
 				| Publishing Pods
 		
 			== printFandocHelp(`HelpPublish.fandoc`)
