--- a/etc/web-components/TopNavBarPrivate.slim
+++ b/etc/web-components/TopNavBarPrivate.slim
@@ -20,7 +20,7 @@ header.navbar.navbar-default.navbar-fixed-top
 				li.hidden-xs;	a (href="/pods/feed.atom" title="Pod Repository RSS Feed")
 					i.fa.fa-rss-square.fa-lg.rss
 				li.dropdown
-					a.dropdown-toggle (href="#" data-toggle="dropdown" role="button" aria-expanded="false")	Help
+					a.dropdown-toggle (href="#" data-toggle="dropdown" role="button" aria-expanded="false")	Get Started
 						span.caret
 					ul.dropdown-menu (role="menu")
 						== pageLink(HelpPublishPage#,	"Publishing Pods")
