--- a/etc/web-pages/Index.html.slim
+++ b/etc/web-pages/Index.html.slim
@@ -36,14 +36,11 @@
 
 	div.row
 		div.col-sm-6.col-md-6
-			h2.sm-text-center	Latest Pods
-			== app.renderPodList(newPods)
+			-- if (newPods.size > 0)
+				h2.sm-text-center	Latest Pods
+				== app.renderPodList(newPods)
 				
 		div.col-sm-6.col-md-6
-			h2.sm-text-center	Latest Updates
-			== app.renderPodList(newVers)
-				
-		/*div.col-sm-6.col-md-4
-			h2.text-center	Most Popular
-			== app.renderPodList(allPods)
-				
+			-- if (newVers.size > 0)
+				h2.sm-text-center	Latest Updates
+				== app.renderPodList(newVers)
