--- a/etc/web-pages/help/HelpPublish.html.slim
+++ b/etc/web-pages/help/HelpPublish.html.slim
@@ -10,8 +10,8 @@
 				span	get started
 				| Publishing Pods
 		
-			== printFandocHelp(`HelpPublish.fandoc`)
+			== printFandocHelp(`/etc/web-pages/help/HelpPublish.fandoc`)
 
 		nav.col-sm-3
 			hr.visible-xs
-			== app.renderHelpToc(`HelpPublish.fandoc`)
+			== app.renderHelpToc(`/etc/web-pages/help/HelpPublish.fandoc`)
