--- a/etc/web-components/TopNavBarPublic.slim
+++ b/etc/web-components/TopNavBarPublic.slim
@@ -19,6 +19,8 @@ header.navbar.navbar-default.navbar-fixed-top
 			ul.nav.navbar-nav.navbar-right
 				li.hidden-xs;	a (href="/pods/feed.atom" title="Pod Repository RSS Feed")
 					i.fa.fa-rss-square.fa-lg.rss
+				-- if (aboutFandocExists)
+					== pageLink(AboutPage#,	"About")
 				li.dropdown.${helpDdCss}
 					a.dropdown-toggle (href="#" data-toggle="dropdown" role="button" aria-expanded="false")	Get Started
 						span.caret
