--- a/etc/web-pages/help/HelpFanr.html.slim
+++ b/etc/web-pages/help/HelpFanr.html.slim
@@ -11,7 +11,7 @@
 				| Using fanr
 		
 			-- echo(host)
-			== printFandocHelp(`/etc/web-pages/help/HelpFanr.fandoc`).replace("@@fanrUrl@@", host.plusSlash.plusName("fanr").encode)
+			== printFandoc(`/etc/web-pages/help/HelpFanr.fandoc`).replace("@@fanrUrl@@", host.plusSlash.plusName("fanr").encode)
 
 		nav.col-sm-3
 			hr.visible-xs
