--- a/etc/web-pages/help/HelpPublish.html.slim
+++ b/etc/web-pages/help/HelpPublish.html.slim
@@ -10,7 +10,7 @@
 				span	get started
 				| Publishing Pods
 		
-			== printFandocHelp(`/etc/web-pages/help/HelpPublish.fandoc`)
+			== printFandoc(`/etc/web-pages/help/HelpPublish.fandoc`)
 
 		nav.col-sm-3
 			hr.visible-xs
