--- a/etc/web-components/TopNavBarPublic.slim
+++ b/etc/web-components/TopNavBarPublic.slim
@@ -17,7 +17,7 @@ header.navbar.navbar-default.navbar-fixed-top
 
 
 			ul.nav.navbar-nav.navbar-right
-				li.hidden-xs;	a (href="/pods/feed.atom" title="Pod Repository RSS Feed")
+				li.hidden-xs.hidden-sm;	a (href="/pods/feed.atom" title="Pod Repository RSS Feed")
 					i.fa.fa-rss-square.fa-lg.rss
 				-- if (aboutFandocExists)
 					== pageLink(AboutPage#,	"About")
