--- a/etc/web-pages/About.html.slim
+++ b/etc/web-pages/About.html.slim
@@ -11,6 +11,6 @@
 		
 			== printFandoc(`/about.fandoc`)
 
-		nav.col-sm-3
+		nav.col-sm-3.fixedsticky
 			hr.visible-xs
 			== app.renderFandocToc(`/about.fandoc`)
