--- a/etc/web-pages/help/HelpFandoc.html.slim
+++ b/etc/web-pages/help/HelpFandoc.html.slim
@@ -28,6 +28,6 @@
 						
 			== printFandoc(`/etc/web-pages/help/HelpFandoc.fandoc`)
 
-		nav.col-sm-3
+		nav.col-sm-3.fixedsticky
 			hr.visible-xs
 			== app.renderHelpToc(`/etc/web-pages/help/HelpFandoc.fandoc`)
