--- a/etc/web-components/FatFooter.slim
+++ b/etc/web-components/FatFooter.slim
@@ -7,13 +7,13 @@ footer#fatFooter.clearfix.hidden-print
 		div.row
 			// .col-xs-12 gives horizontal padding on small screens
 			div.col-xs-12
-				-- if (repoConfig.contactEnabled)
+				-- if (eggboxConfig.contactEnabled)
 					p.pull-right
-						| Contact ${repoConfig.contactName} at:
+						| Contact ${eggboxConfig.contactName} at:
 						br
-						a#contactUs (href="#" data-unscramble="${repoConfig.contactEmail.encode.reverse}") ${"".padl('-', repoConfig.contactEmail.encode.size)}
+						a#contactUs (href="#" data-unscramble="${eggboxConfig.contactEmail.encode.reverse}") ${"".padl('-', eggboxConfig.contactEmail.encode.size)}
 
-				p	Fantom Pod Repository v${FatFooter#.pod.version}
+				p	${FatFooter#.pod.meta["proj.name"]} v${FatFooter#.pod.version}
 					// - © ${Date.today.year} Alien-Factory
 					br
 					a (href="http://www.fantom.org/")
