Condensed the tables to how they should be on Pod Api Index Page

--- a/etc/less/website.less
+++ b/etc/less/website.less
@@ -18,5 +18,6 @@
 @import "components/topNavBar.less";
 
 @import "pages/indexPage.less";
+@import "pages/podApiIndexPage.less";
 @import "pages/podsPage.less";
 @import "pages/podSummaryPage.less";
