Side menus are affixed in place

--- a/etc/less/pages/podDoc.less
+++ b/etc/less/pages/podDoc.less
@@ -1,3 +1,6 @@
+
+// requrired for scrollspy
+// see http://getbootstrap.com/javascript/#requires-relative-positioning
 body {
   position: relative;
 }
@@ -32,7 +35,6 @@ body {
 	}
 	li.active > a,
 	li.active > a:hover {
-		//background-color:	@nav-link-hover-bg;
 		border-left:	3px solid @brand-success;
 		border-radius:	@border-radius-base;
 		padding-left:	2px;
