--- a/etc/less/website.less
+++ b/etc/less/website.less
@@ -7,6 +7,7 @@
 @import "fonts/fonticons.less";
 @import "fonts/fontawesome.less";
 
+@import "sections/affix.less";
 @import "sections/api.less";
 @import "sections/fandoc.less";
 @Import "sections/podList.less";
