--- a/etc/web-pages/help/HelpFandoc.html.slim
+++ b/etc/web-pages/help/HelpFandoc.html.slim
@@ -29,5 +29,6 @@
 			== printFandoc(`/etc/web-pages/help/HelpFandoc.fandoc`)
 
 		nav.col-sm-3.fixedsticky
-			hr.visible-xs
-			== app.renderHelpToc(`/etc/web-pages/help/HelpFandoc.fandoc`)
+			div.sideMenu
+				hr.visible-xs
+				== app.renderHelpToc(`/etc/web-pages/help/HelpFandoc.fandoc`)
