--- a/etc/web-pages/help/HelpFanr.html.slim
+++ b/etc/web-pages/help/HelpFanr.html.slim
@@ -14,5 +14,6 @@
 			== printFandoc(`/etc/web-pages/help/HelpFanr.fandoc`).replace("@@fanrUrl@@", host.plusSlash.plusName("fanr").encode)
 
 		nav.col-sm-3.fixedsticky
-			hr.visible-xs
-			== app.renderHelpToc(`/etc/web-pages/help/HelpFanr.fandoc`)
+			div.sideMenu
+				hr.visible-xs
+				== app.renderHelpToc(`/etc/web-pages/help/HelpFanr.fandoc`)
