Pod sorting done via Javascript

--- a/etc/less/sections/podList.less
+++ b/etc/less/sections/podList.less
@@ -12,18 +12,8 @@
 	.jsIcon {
 		margin-left:	@padding-small-horizontal / 2;
 	}
-}
-
-.podTable {
-	.tableIcon {
-		img {
-			width:		64px;
-			height:		64px;
-		}
-		margin-right:	@padding-base-horizontal;
-	}
-
-	.jsIcon {
-		margin-right:	@padding-small-horizontal / 2;
+	
+	.media:last-child > hr {
+		display:	none;
 	}
 }
