Inlined shields.oi badges

--- a/etc/less/components/fatFooter.less
+++ b/etc/less/components/fatFooter.less
@@ -1,4 +1,11 @@
 
-#contactUs {
-	font-family: @font-family-monospace;
+#fatFooter {
+	#contactUs {
+		font-family: @font-family-monospace;
+	}
+	
+	.shieldsio:hover {
+		text-decoration: none;
+	}
 }
+
