--- a/etc/web-components/FatFooter.slim
+++ b/etc/web-components/FatFooter.slim
@@ -16,10 +16,12 @@ footer#fatFooter.clearfix.hidden-print
 				p	${FatFooter#.pod.meta["proj.name"]} v${FatFooter#.pod.version}
 					// - © ${Date.today.year} Alien-Factory
 					br
-					a (href="http://www.fantom.org/")
-						img (src="http://img.shields.io/badge/developed%20in-Fantom-lightgray.svg" alt="Developed in: Fantom")
+					a.shieldsio (href="http://www.fantom.org/")
+						// img (src="http://img.shields.io/badge/developed%20in-Fantom-lightgray.svg" alt="Developed in: Fantom")
+						| <svg xmlns="http://www.w3.org/2000/svg" width="135" height="20"><linearGradient id="b" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><mask id="a"><rect width="135" height="20" rx="3" fill="#fff"/></mask><g mask="url(#a)"><path fill="#555" d="M0 0h83v20H0z"/><path fill="#9f9f9f" d="M83 0h52v20H83z"/><path fill="url(#b)" d="M0 0h135v20H0z"/></g><g fill="#fff" text-anchor="middle" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="41.5" y="15" fill="#010101" fill-opacity=".3">developed in</text><text x="41.5" y="14">developed in</text><text x="108" y="15" fill="#010101" fill-opacity=".3">Fantom</text><text x="108" y="14">Fantom</text></g></svg>
 					| &nbsp;&nbsp;
-					a (href="http://www.fantomfactory.org/pods/afBedSheet")
-						img (src="http://img.shields.io/badge/powered%20by-BedSheet-green.svg" alt="Powered by: BedSheet")
+					a.shieldsio (href="http://www.fantomfactory.org/pods/afBedSheet")
+						// img (src="http://img.shields.io/badge/powered%20by-BedSheet-green.svg" alt="Powered by: BedSheet")
+						| <svg xmlns="http://www.w3.org/2000/svg" width="142" height="20"><linearGradient id="d" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><mask id="c"><rect width="142" height="20" rx="3" fill="#fff"/></mask><g mask="url(#c)"><path fill="#555" d="M0 0h77v20H0z"/><path fill="#97CA00" d="M77 0h65v20H77z"/><path fill="url(#d)" d="M0 0h142v20H0z"/></g><g fill="#fff" text-anchor="middle" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="38.5" y="15" fill="#010101" fill-opacity=".3">powered by</text><text x="38.5" y="14">powered by</text><text x="108.5" y="15" fill="#010101" fill-opacity=".3">BedSheet</text><text x="108.5" y="14">BedSheet</text></g></svg>
 	
 			p	&nbsp;
