Added tag to font icons

--- a/etc/less/fonts/fonticons.less
+++ b/etc/less/fonts/fonticons.less
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fonticons';
-  src: url('../../0v2SjA==/fonts/fonticons.eot');
-  src: url('../../0v2SjA==/fonts/fonticons.eot#iefix') format('embedded-opentype'),
-       url('../../jgl3Hw==/fonts/fonticons.woff') format('woff'),
-       url('../../3gl_9A==/fonts/fonticons.ttf') format('truetype'),
-       url('../../F8ZMZg==/fonts/fonticons.svg#fonticons') format('svg');
+  src: url('../../1divSg==/fonts/fonticons.eot');
+  src: url('../../1divSg==/fonts/fonticons.eot#iefix') format('embedded-opentype'),
+       url('../../LIaO0w==/fonts/fonticons.woff') format('woff'),
+       url('../../SfGc3w==/fonts/fonticons.ttf') format('truetype'),
+       url('../../JquNjw==/fonts/fonticons.svg#fonticons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fonticons';
-    src: url('../font/fonticons.svg?22021420#fonticons') format('svg');
+    src: url('../font/fonticons.svg#fonticons') format('svg');
   }
 }
 */
@@ -57,6 +57,7 @@
 .fa-fanny:before { content: '\e800'; } /* '' */
 .fa-fanny-o:before { content: '\e801'; } /* '' */
 .fa-download:before { content: '\f019'; } /* '' */
+.fa-tag:before { content: '\f02b'; } /* '' */
 .fa-external-link:before { content: '\f08e'; } /* '' */
 .fa-clipboard:before { content: '\f0ea'; } /* '' */
 .fa-rss-square:before { content: '\f143'; } /* '' */
