Displaying tags in PodList

--- a/etc/less/sections/podList.less
+++ b/etc/less/sections/podList.less
@@ -13,6 +13,11 @@
 		margin-left:	@padding-small-horizontal / 2;
 	}
 	
+	.tag {
+		padding:		1px 0;	// to show rounded corners in Firefox
+		margin-left:	@padding-xs-horizontal;
+	}
+
 	.media:last-child > hr {
 		display:	none;
 	}
