--- a/etc/less/sections/podList.less
+++ b/etc/less/sections/podList.less
@@ -13,9 +13,13 @@
 		margin-left:	@padding-small-horizontal / 2;
 	}
 	
-	.tag {
+	.tagContainer {
 		padding:		1px 0;	// to show rounded corners in Firefox
 		margin-left:	@padding-xs-horizontal;
+	}
+
+	.label {
+		background-color:	@label-success-bg;
 	}
 
 	.media:last-child > hr {
