--- a/etc/less/website.less
+++ b/etc/less/website.less
@@ -22,3 +22,4 @@
 @import "pages/podApiIndexPage.less";
 @import "pages/podDoc.less";
 @import "pages/podSummaryPage.less";
+@import "pages/podsPage.less";
