Javascript tag toggle

--- a/etc/less/global.less
+++ b/etc/less/global.less
@@ -37,6 +37,9 @@ ol, ul {
 	display:			none;
 }
 
+.clear-both {
+	clear:				both;
+}
 
 /* ---- Bootstrap Overrides --------------------------------------------------------------------- */
 
