--- a/etc/less/pages/podsPage.less
+++ b/etc/less/pages/podsPage.less
@@ -1,5 +1,13 @@
 
 #podsPage {
+	.btn-group {
+		margin-bottom:	@padding-large-vertical;
+	}
+
+	#tags {
+		padding:		@padding-large-vertical 0;
+	}
+
 	.tag:hover {
 		cursor:	pointer;
 	}
@@ -9,9 +17,9 @@
 	}
 	
 	.podList .media {
+		//overflow:	hidden;
+		//transition:	all 500ms ease;
+		//height: 	0;
 		display:	none;
-  //opacity : 0;
-  //height : 0;
-  //transition : opacity 800ms, height 0 800ms;
 	}
 }
