Basic not found page

--- a/etc/web-components/FatFooter.slim
+++ b/etc/web-components/FatFooter.slim
@@ -13,7 +13,7 @@ footer#fatFooter.clearfix.hidden-print
 						br
 						a#contactUs (href="#" data-unscramble="${eggboxConfig.contactEmail.encode.reverse}") ${"".padl('-', eggboxConfig.contactEmail.encode.size)}
 
-				p	${FatFooter#.pod.meta["proj.name"]} v${FatFooter#.pod.version}
+				p;	a (href="http://pods.fantomfactory.org/pods/afEggbox/")	${FatFooter#.pod.meta["proj.name"]} v${FatFooter#.pod.version}
 					// - © ${Date.today.year} Alien-Factory
 					br
 					a.shieldsio (href="http://www.fantom.org/")
