Glowing hole in 404 page

--- a/etc/less/website.less
+++ b/etc/less/website.less
@@ -18,6 +18,7 @@
 @import "components/jasny-bootstrap.less";
 @import "components/topNavBar.less";
 
+@import "pages/error404Page.less";
 @import "pages/indexPage.less";
 @import "pages/podApiIndexPage.less";
 @import "pages/podDoc.less";
