--- a/etc/web-pages/About.html.slim
+++ b/etc/web-pages/About.html.slim
@@ -12,5 +12,6 @@
 			== printFandoc(`/about.fandoc`)
 
 		nav.col-sm-3.fixedsticky
-			hr.visible-xs
-			== app.renderFandocToc(`/about.fandoc`)
+			div.sideMenu
+				hr.visible-xs
+				== app.renderFandocToc(`/about.fandoc`)
