--- a/etc/web-pages/Index.html.slim
+++ b/etc/web-pages/Index.html.slim
@@ -35,19 +35,19 @@
 			|  to publish your pods to this site!
 
 	div.row
-		div.col-sm-6.col-md-6.latestPods
-			-- if (newPods.size > 0)
-				h2.sm-text-center	Latest Pods
-				== app.renderPodList(newPods)
+
+		div.col-sm-6.col-sm-push-6.latestVersions
+			-- if (newVers.size > 0)
+				h2.sm-text-center	Latest Updates
+				== app.renderPodList(newVers)
 				div.sm-text-center
 					| See more in 
 					a (href="${pageUrl(PodsPage#)}") All Pods
 					| ...
-
-		div.col-sm-6.col-md-6.latestVersions
-			-- if (newVers.size > 0)
-				h2.sm-text-center	Latest Updates
-				== app.renderPodList(newVers)
+		div.col-sm-6.col-sm-pull-6.latestPods
+			-- if (newPods.size > 0)
+				h2.sm-text-center	Latest Pods
+				== app.renderPodList(newPods)
 				div.sm-text-center
 					| See more in 
 					a (href="${pageUrl(PodsPage#)}") All Pods
