/pods -> /pods/ Pods pages are redirected to the correct URL, should it be different (get correct dir endings) It tidies up Google Analytics stats is nothing else.

--- a/etc/web-pages/Index.html.slim
+++ b/etc/web-pages/Index.html.slim
@@ -42,7 +42,7 @@
 				== app.renderPodList(newVers)
 				div.sm-text-center
 					| See more in 
-					a (href="${pageUrl(PodsPage#)}") All Pods
+					a (href="${pageUrl(PodsIndexPage#)}") All Pods
 					| ...
 		div.col-sm-6.col-sm-pull-6.latestPods
 			-- if (newPods.size > 0)
@@ -50,5 +50,5 @@
 				== app.renderPodList(newPods)
 				div.sm-text-center
 					| See more in 
-					a (href="${pageUrl(PodsPage#)}") All Pods
+					a (href="${pageUrl(PodsIndexPage#)}") All Pods
 					| ...
