--- a/etc/web-components/TopNavBarPublic.slim
+++ b/etc/web-components/TopNavBarPublic.slim
@@ -13,7 +13,7 @@ header.navbar.navbar-default.navbar-fixed-top
 
 		div#navbar.navbar-collapse.collapse
 			ul.nav.navbar-nav
-				== pageLink(PodsPage#,	"All Pods")
+				== pageLink(PodsIndexPage#,	"All Pods")
 
 
 			ul.nav.navbar-nav.navbar-right
