Added Fantom-Factory icon to 404 page

--- a/etc/less/global.less
+++ b/etc/less/global.less
@@ -51,6 +51,7 @@ code {
 	color:				#080;
 	background-color:	inherit;
 	padding:			0px 2px;
+	tab-size:			4;
 }
 
 // form-okay prevents invalid forms from appearing green when first rendered!
