--- a/etc/less/pages/error404Page.less
+++ b/etc/less/pages/error404Page.less
@@ -21,6 +21,18 @@
 		width:			@holeWidth;
 		height:			100%;
 	}
+	.fantomFactory {
+		position:		absolute;
+		height:			@holeHeight;
+		width:			@holeWidth;
+		img {
+			position:		relative;
+			top:			(@holeHeight - 200px) / 2;
+			left:			(@holeWidth  - 200px) / 2;
+			width:			200px;
+			height:			200px;
+		}
+	}
 	.hive {
 		position:		absolute;
 		width:			@holeWidth;
