--- a/etc/web-pages/Error404.html.slim
+++ b/etc/web-pages/Error404.html.slim
@@ -11,6 +11,8 @@
 					div.hive
 					div.hole
 						img.img-responsive (src="/images/theHole.png" alt="A tear in the Fantomverse")
+					div.fantomFactory
+						img (src="/images/fantomFactory.png" alt="Fantom-Factory")
 
 			h1.podHeading
 				span	404
