--- a/etc/less/pages/podSummaryPage.less
+++ b/etc/less/pages/podSummaryPage.less
@@ -31,4 +31,9 @@
 		.lead;
 		margin:		(@padding-large-vertical *2) (@padding-large-horizontal *2);
 	}
+
+	.podVersions .podVersion {
+		display:				inline-block;
+		min-width:				60px;
+	}
 }
