Prevented sidemenu from overlaying the main page in XS view.

--- a/etc/web-pages/About.html.slim
+++ b/etc/web-pages/About.html.slim
@@ -11,7 +11,7 @@
 		
 			== printFandoc(`/about.fandoc`)
 
-		nav.col-sm-3.fixedsticky
+		nav.col-sm-3.fixedsticky.hidden-xs
 			div.sideMenu
 				hr.visible-xs
 				== app.renderFandocToc(`/about.fandoc`)
