--- a/etc/web-pages/help/HelpFandoc.html.slim
+++ b/etc/web-pages/help/HelpFandoc.html.slim
@@ -28,7 +28,7 @@
 						
 			== printFandoc(`/etc/web-pages/help/HelpFandoc.fandoc`)
 
-		nav.col-sm-3.fixedsticky
+		nav.col-sm-3.fixedsticky.hidden-xs
 			div.sideMenu
 				hr.visible-xs
 				== app.renderHelpToc(`/etc/web-pages/help/HelpFandoc.fandoc`)
