--- a/etc/web-pages/help/HelpFanr.html.slim
+++ b/etc/web-pages/help/HelpFanr.html.slim
@@ -13,7 +13,7 @@
 			-- echo(host)
 			== printFandoc(`/etc/web-pages/help/HelpFanr.fandoc`).replace("@@fanrUrl@@", host.plusSlash.plusName("fanr").encode)
 
-		nav.col-sm-3.fixedsticky
+		nav.col-sm-3.fixedsticky.hidden-xs
 			div.sideMenu
 				hr.visible-xs
 				== app.renderHelpToc(`/etc/web-pages/help/HelpFanr.fandoc`)
