--- a/etc/web-pages/help/HelpPublish.html.slim
+++ b/etc/web-pages/help/HelpPublish.html.slim
@@ -12,7 +12,7 @@
 		
 			== printFandoc(`/etc/web-pages/help/HelpPublish.fandoc`)
 
-		nav.col-sm-3.fixedsticky
+		nav.col-sm-3.fixedsticky.hidden-xs
 			div.sideMenu
 				hr.visible-xs
 				== app.renderHelpToc(`/etc/web-pages/help/HelpPublish.fandoc`)
