--- a/etc/less/fonts/fonticons.less
+++ b/etc/less/fonts/fonticons.less
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fonticons';
-  src: url('../../1divSg==/fonts/fonticons.eot');
-  src: url('../../1divSg==/fonts/fonticons.eot#iefix') format('embedded-opentype'),
-       url('../../LIaO0w==/fonts/fonticons.woff') format('woff'),
-       url('../../SfGc3w==/fonts/fonticons.ttf') format('truetype'),
-       url('../../JquNjw==/fonts/fonticons.svg#fonticons') format('svg');
+  src: url('../../jlrVbw==/fonts/fonticons.eot');
+  src: url('../../jlrVbw==/fonts/fonticons.eot#iefix') format('embedded-opentype'),
+       url('../../4DnI0Q==/fonts/fonticons.woff') format('woff'),
+       url('../../9AjCww==/fonts/fonticons.ttf') format('truetype'),
+       url('../../YTHnEQ==/fonts/fonticons.svg#fonticons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -56,6 +56,7 @@
  
 .fa-fanny:before { content: '\e800'; } /* '' */
 .fa-fanny-o:before { content: '\e801'; } /* '' */
+.fa-search:before { content: '\f002'; } /* '' */
 .fa-download:before { content: '\f019'; } /* '' */
 .fa-tag:before { content: '\f02b'; } /* '' */
 .fa-external-link:before { content: '\f08e'; } /* '' */
