--- a/etc/less/sections/podList.less
+++ b/etc/less/sections/podList.less
@@ -22,6 +22,11 @@
 		background-color:	@label-success-bg;
 	}
 
+	.media {
+		margin-top:		0;
+		margin-bottom:	15px;
+	}
+
 	.media:last-child > hr {
 		display:	none;
 	}
