Pod searching on Index page... too cool!

--- a/etc/less/global.less
+++ b/etc/less/global.less
@@ -1,4 +1,9 @@
 
+html {
+	// do things don't move around when linking from a short page to a long page
+	overflow-y:			scroll;
+}
+
 @colour-rss:			#FF9030;
 //@colour-white:		#FFFFFF;
 //@colour-black:		#131313;
