--- a/etc/web-pages/Index.html.slim
+++ b/etc/web-pages/Index.html.slim
@@ -14,7 +14,7 @@
 			div.col-sm-10.col-sm-offset-1
 				div.input-group.input-group-lg
 					span.input-group-addon;	i.fa-search
-					input#searchBox.form-control (type="text" name="searchBox" placeholder="Search pods..." value="" list="projNames" autocomplete="off")
+					input#searchBox.form-control (type="text" name="searchBox" placeholder="Search pod names..." value="" list="projNames" autocomplete="off")
 					span.input-group-btn
 						button#searchGo.btn.btn-default (type="submit" disabled);	i Go!
 			datalist#projNames
