--- a/etc/web-components/FatFooter.slim
+++ b/etc/web-components/FatFooter.slim
@@ -11,9 +11,10 @@ footer#fatFooter.clearfix.hidden-print
 					p.pull-right
 						| Contact ${eggboxConfig.contactName} at:
 						br
-						a#contactUs (href="#" data-unscramble="${eggboxConfig.contactEmail.encode.reverse}") ${"".padl('-', eggboxConfig.contactEmail.encode.size)}
+						a#contactUs (href="#" data-unscramble="${eggboxConfig.contactEmail.encode.reverse}") ${"".padl(eggboxConfig.contactEmail.encode.size, '-')}
 
-				p;	a (href="http://pods.fantomfactory.org/pods/afEggbox/")	${FatFooter#.pod.meta["proj.name"]} v${FatFooter#.pod.version}
+				p
+					a (href="http://pods.fantomfactory.org/pods/afEggbox/")	${FatFooter#.pod.meta["proj.name"]} v${FatFooter#.pod.version}
 					// - © ${Date.today.year} Alien-Factory
 					br
 					a.shieldsio (href="http://www.fantom.org/")
