--- a/etc/web-pages/Index.html.slim
+++ b/etc/web-pages/Index.html.slim
@@ -26,7 +26,7 @@
 	-- if (!loggedIn)
 		p.row.sm-text-center.text-muted;	i 
 			a (href="${pageUrl(SignupPage#)}") Sign Up
-			|  to publish your pods to this site!
+			|  to publish your pods to this free site!
 
 	p	&nbsp;
 
